- Added Market Insights page with TradingView widgets. -- Updated sidebar with link to this new page

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
             <i class="fas fa-mobile-alt"></i>
             <h3>Mobile Friendly</h3>
             <p>Log your trades on the go with our mobile-friendly interface.</p>
+        </div>
+
+        <div class="feature-card">
+          <!-- TradingView widgets -->
+           <i class="fas fa-chart-line"></i>
+            <h3>Market Insights by TradingView</h3>
+            <p>Stay up-to-date with the latest market news and insights from TradingView.</p>
     </section>
 
 <!-- Pricing Section -->
@@ -81,10 +88,10 @@
                 <h3>Free, Forever.</h3>
                 <div class="price">$0<span>/month</span></div>
                 <ul>
-                    <li><i class="fas fa-check"></i> 100 Mb storage (cloud)</li>
+                    <li><i class="fas fa-check"></i> Cloud Storage (100MB)</li>
                     <li><i class="fas fa-check"></i> *Option for unlimited storage</li>
                     <li><i class="fas fa-check"></i> Basic analytics</li>
-                    <li><i class="fas fa-check"></i> Cloud storage</li>
+                    <li><i class="fas fa-check"></i> Market Insights by TradingView</li>
                     <li><i class="fas fa-check"></i> Mobile friendly access</li>
                 </ul>
                 <a href="#" class="btn-primary">Get Started</a>
