--- a/pages/analytics.html
+++ b/pages/analytics.html
@@ -39,7 +39,7 @@
           <span>Trading Tools</span>
         </div>
         <nav class="sidebar-nav">
-          <a href="trade-entry.html" class="sidebar-link active">
+          <a href="trade-entry.html" class="sidebar-link">
             <i class="fas fa-plus-circle"></i>
             <span>Manual Entry</span>
           </a>
@@ -47,9 +47,13 @@
             <i class="fas fa-file-import"></i>
             <span>Import Trades</span>
           </a>
-          <a href="analytics.html" class="sidebar-link">
+          <a href="analytics.html" class="sidebar-link active">
             <i class="fas fa-chart-bar"></i>
             <span>Analytics</span>
+          </a>
+          <a href="market-insights.html" class="sidebar-link">
+            <i class="fas fa-globe"></i>
+            <span>Market Insights</span>
           </a>
           <a href="dashboard.html" class="sidebar-link">
             <i class="fas fa-calendar-alt"></i>
