--- a/pages/trade-history.html
+++ b/pages/trade-history.html
@@ -48,6 +48,10 @@
             <i class="fas fa-chart-bar"></i>
             <span>Analytics</span>
           </a>
+          <a href="market-insights.html" class="sidebar-link">
+            <i class="fas fa-globe"></i>
+            <span>Market Insights</span>
+          </a>
           <a href="dashboard.html" class="sidebar-link">
             <i class="fas fa-calendar-alt"></i>
             <span>Calendar</span>
