- Completed Market Insights page, including styles. - Fixed PnL display and calculation in trade-entry.html and added a today's pnl caclulation that calculates current pnl based days trades only.

--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -69,12 +69,19 @@
           <h1>Trade Entry</h1>
         </div>
 
-        <!-- Cumulative P/L -->
-        <div class="cumulative-pnl">
-          <h2>Cumulative P/L</h2>
-          <div class="value">$0.00</div>
-          <div class="percentage">0.00%</div>
-        </div>
+                  <!-- Cumulative P/L -->
+                  <div class="pnl-container">
+                    <div class="cumulative-pnl">
+                      <h2>Cumulative P/L</h2>
+                      <div class="value">$0.00</div>
+                      <div class="percentage">0.00%</div>
+                    </div>
+                    <div class="todays-pnl">
+                      <h2>Today's P/L</h2>
+                      <div class="value">$0.00</div>
+                      <div class="percentage">0.00%</div>
+                    </div>
+                  </div>
 
         <div class="tradingView-ticker">
           <!-- TradingView Widget BEGIN -->
