--- a/pages/market-insights.html
+++ b/pages/market-insights.html
@@ -49,7 +49,7 @@
                 <a href="market-insights.html" class="sidebar-link active">
                     <i class="fas fa-globe"></i>
                     <span>Market Insights</span>
-                  </a>
+                </a>
                 <a href=".dashboard.html" class="sidebar-link">
                     <i class="fas fa-calendar-alt"></i>
                     <span>Calendar</span>
@@ -235,8 +235,8 @@
                         <div class="tradingview-widget-container">
                             <div class="tradingview-widget-container__widget"></div>
                             <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/"
-                                    rel="noopener nofollow" target="_blank"><span class="blue-text">Track all
-                                        markets on TradingView</span></a></div>
+                                    rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on
+                                        TradingView</span></a></div>
                             <script type="text/javascript"
                                 src="https://s3.tradingview.com/external-embedding/embed-widget-hotlists.js" async>
                                     {
@@ -249,7 +249,7 @@
                                                                 "height": "100%",
                                                                     "largeChartUrl": "",
                                                                         "isTransparent": false,
-                                                                            "showSymbolLogo": false,
+                                                                            "showSymbolLogo": true,
                                                                                 "showFloatingTooltip": true,
                                                                                     "plotLineColorGrowing": "rgba(41, 98, 255, 1)",
                                                                                         "plotLineColorFalling": "rgba(41, 98, 255, 1)",
