- Added an extra feature card advertising free platform

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
            <i class="fas fa-chart-line"></i>
             <h3>Market Insights by TradingView</h3>
             <p>Stay up-to-date with the latest market news and insights from TradingView.</p>
+        </div>
+
+        <div class="feature-card">
+          <!-- Free Platform -->
+            <i class="fas fa-wallet"></i>
+            <h3>Free Platform</h3>
+            <p>Don't pay premium prices for basic features. TradeLab is a free platform that covers all the essential features you need.</p>
+        </div>
     </section>
 
 <!-- Pricing Section -->
