minor fixes to logic

--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -302,10 +302,10 @@
             <div class="form-group">
               <label for="editMarket">Market:</label>
               <select id="editMarket" required>
-                <option value="Stocks">Stocks</option>
+                <option value="Stock">Stocks</option>
                 <option value="Crypto">Crypto</option>
-                <option value="Forex">Forex</option>
                 <option value="Options">Options</option>
+                <option value="Futures">Futures</option>
               </select>
             </div>
             <div class="form-group">
