-Created a user guide page to get users started quickly. -Update footer in all pages with the link to the user guide. -Updated the import algorithm in import.js and TradeObjectHandler.js, however, more work needs to be done.

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                             <li><a href="#pricing">Pricing</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="/pages/contact.html">Contact</a></li>
+                            <li><a href="/pages/user-guide.html">User Guide</a></li>
                         </ul>
                     </div>
                     <div class="footer-section">
