--- a/pages/market-insights.html
+++ b/pages/market-insights.html
@@ -42,6 +42,10 @@
                     <i class="fas fa-file-import"></i>
                     <span>Import Trades</span>
                 </a>
+                <a href="trade-history.html" class="sidebar-link">
+                    <i class="fas fa-list"></i>
+                    <span>All Trades</span>
+                  </a>
                 <a href="analytics.html" class="sidebar-link">
                     <i class="fas fa-chart-bar"></i>
                     <span>Analytics</span>
@@ -369,6 +373,7 @@
                     <li><a href="../index.html#pricing">Pricing</a></li>
                     <li><a href="../index.html#about">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/pages/user-guide.html">User Guide</a></li>
                 </ul>
             </div>
             <div class="footer-section">
