--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -229,6 +229,7 @@
                         <li><a href="../index.html#pricing">Pricing</a></li>
                         <li><a href="../index.html#about">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="/pages/user-guide.html">User Guide</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
