--- a/pages/risk-disclosure.html
+++ b/pages/risk-disclosure.html
@@ -86,6 +86,7 @@
               <li><a href="../index.html#pricing">Pricing</a></li>
               <li><a href="../index.html#about">About</a></li>
               <li><a href="contact.html">Contact</a></li>
+              <li><a href="user-guide.html">User Guide</a></li>
             </ul>
           </div>
           <div class="footer-section">
