- Updated html structure and modal to allow for trade charts

--- a/pages/trade-history.html
+++ b/pages/trade-history.html
@@ -130,7 +130,7 @@
       </main>
     </div>
 
-      <!-- Trade Details Modal -->
+     <!-- Trade Details Modal -->
   <div id="tradeDetailsModal" class="modal">
     <div class="modal-content">
       <div class="modal-header">
@@ -193,11 +193,11 @@
           </div>
         </div>
 
-        <!-- News Section -->
-        <div class="news-section">
-          <h3>Related News</h3>
-          <div id="newsWidget" class="news-container">
-            <!-- News Widget will be inserted here -->
+        <!-- Technical Analysis Section -->
+        <div class="analysis-section">
+          <h3>Technical Analysis</h3>
+          <div id="technicalAnalysis" class="analysis-container">
+            <!-- TradingView Technical Analysis Widget will be inserted here -->
           </div>
         </div>
       </div>
@@ -249,5 +249,6 @@
     <script src="../scripts/TradeObjectHandler.js"></script>
     <script src="../scripts/tradeHistory.js"></script>
     <script src="../scripts/tradeModal.js"></script>
+    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   </body>
 </html>
