--- a/pages/trade-history.html
+++ b/pages/trade-history.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TradeLab - All Trades</title>
     <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="/styles/modal.css">
     <link rel="stylesheet" href="/styles/dashboard.css" />
     <link rel="stylesheet" href="/styles/trade-entry.css" />
     <link rel="stylesheet" href="/styles/trade-history.css" />
-    <link rel="stylesheet" href="/styles/modal.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -243,6 +243,64 @@
         <p>&copy; 2024 TradeLab. All rights reserved.</p>
       </div>
     </footer>
+
+        <!-- Edit Trade Modal -->
+        <div id="editTradeModal" class="modal">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h2>Edit Trade</h2>
+                  <span class="close">&times;</span>
+              </div>
+              <form id="editTradeForm">
+                  <input type="hidden" id="editTradeId">
+                  <div class="form-group">
+                      <label for="editDate">Date:</label>
+                      <input type="date" id="editDate" required>
+                  </div>
+                  <div class="form-group">
+                      <label for="editSymbol">Symbol:</label>
+                      <input type="text" id="editSymbol" required>
+                  </div>
+                  <div class="form-group">
+                      <label for="editDirection">Direction:</label>
+                      <select id="editDirection" required>
+                          <option value="long">Long</option>
+                          <option value="short">Short</option>
+                      </select>
+                  </div>
+                  <div class="form-group">
+                      <label for="editMarket">Market:</label>
+                      <select id="editMarket" required>
+                          <option value="Stocks">Stocks</option>
+                          <option value="Crypto">Crypto</option>
+                          <option value="Forex">Forex</option>
+                          <option value="Options">Options</option>
+                          <option value="Futures">Futures</option>
+                      </select>
+                  </div>
+                  <div class="form-group">
+                      <label for="editEntryPrice">Entry Price:</label>
+                      <input type="number" id="editEntryPrice" step="0.01" required>
+                  </div>
+                  <div class="form-group">
+                      <label for="editExitPrice">Exit Price:</label>
+                      <input type="number" id="editExitPrice" step="0.01" required>
+                  </div>
+                  <div class="form-group">
+                      <label for="editQuantity">Quantity:</label>
+                      <input type="number" id="editQuantity" required>
+                  </div>
+                  <div class="form-group">
+                      <label for="editNotes">Notes:</label>
+                      <textarea id="editNotes"></textarea>
+                  </div>
+                  <div class="form-actions">
+                      <button type="submit" class="btn primary">Save Changes</button>
+                      <button type="button" id="cancelEdit" class="btn">Cancel</button>
+                  </div>
+              </form>
+          </div>
+      </div>
 
     <script src="../scripts/global.js"></script>
     <script src="../scripts/dashboard.js"></script>
