- Created Auth page that will redirect users to log in to the site. Created, page styles. JS file has not being completed. - Fixed a few styling issues with resizing in trade-entry.css.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li><a href="#pricing">Pricing</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="/pages/contact.html">Contact</a></li>
-      <li><a href="/pages/trade-entry.html" class="cta-button">Dashboard</a></li>
+      <li><a href="/pages/dashboard.html" class="cta-button">Dashboard</a></li>
     </ul>
     <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
   </nav>
