- Finished the rest of the website's features including: --Theme - Users can now select between dark and light theme. --Auth - Scripts have been created to check if a user is logged in before allowing the user to go to the dashboard pages. If not logged in, the user will redirected to the sign-in/sign-up page. -Fixed a few styling issues,  for dashboard, contact, calendar-view pages. -Reworked some of the script in the calendar view so it displays properly in the page.

--- a/pages/import.html
+++ b/pages/import.html
@@ -132,6 +132,30 @@
                 <i class="fas fa-download"></i> Download Template
               </button>
             </div>
+            <div class="import-instructions">
+              <h2>Instructions</h2>
+              <ol>
+                  <li>Download our Excel template or ensure your file matches the required format</li>
+                  <li>Fill in your trade data following the template structure</li>
+                  <li>Upload your file using the drag & drop zone or file selector</li>
+                  <li>Review the preview of your data</li>
+                  <li>Click "Import Trades" to add the trades to your account</li>
+              </ol>
+              
+              <div class="format-requirements">
+                  <h3>Required Columns</h3>
+                  <ul>
+                      <li>Symbol (e.g., AAPL, EURUSD)</li>
+                      <li>Trade Type (Stock, Futures, Forex, Crypto, Options)</li>
+                      <li>Entry Price</li>
+                      <li>Exit Price</li>
+                      <li>Quantity</li>
+                      <li>Date</li>
+                      <li>Winning Trade (Yes/No)</li>
+                      <li>Notes (Optional)</li>
+                  </ul>
+              </div>
+          </div>
           </div>
         </div>
       </main>
