--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <nav class="navbar">
     <div class="nav-brand"><a href="/index.html">TradeLab</a></div>
     <ul class="nav-links">
-      <li><a href="/index.html" class="active">Home</a></li>
-      <li><a href="#features">Features</a></li>
-      <li><a href="#pricing">Pricing</a></li>
-      <li><a href="#about">About</a></li>
+      <li><a href="/index.html" class="active index">Home</a></li>
+      <li><a href="#features" class="features">Features</a></li>
+      <li><a href="#pricing" class="pricing">Pricing</a></li>
+      <li><a href="#about"  class="about">About</a></li>
       <li><a href="/pages/contact.html">Contact</a></li>
       <li><a href="/pages/dashboard.html" class="cta-button">Dashboard</a></li>
     </ul>
@@ -184,7 +184,28 @@
       <p>&copy; 2024 TradeLab. All rights reserved.</p>
     </div>
   </footer>
-  <script src="/scripts/global.js"></script>
+  <!-- <script src="/scripts/global.js"></script> -->
+   <script src="/script/global.js"></script>
+   <script>
+    const index = document.querySelector(".index");
+    const features = document.querySelector(".features");
+    const pricing = document.querySelector(".pricing");
+    const about = document.querySelector(".about");
+    const navlinks  = [index, features, pricing, about];
+
+    navlinks.forEach((link) => {
+      link.addEventListener("click", () => {
+        if (link.classList.contains("active")) {
+          link.classList.remove("active");
+        } else {
+          navlinks.forEach((otherLink) => {
+            otherLink.classList.remove("active");
+          });
+          link.classList.add("active");
+        }
+        })
+      });
+   </script>
   </div>
 </body>
 
