--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -6,7 +6,6 @@
     <title>Calendar View - TradeTracker</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/styles/dashboard.css">
-    <link rel="stylesheet" href="/styles/global.css">
     <link rel="stylesheet" href="/styles/calendar-view.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -21,7 +20,7 @@
       <li><a href="../index.html#pricing">Pricing</a></li>
       <li><a href="../index.html#about">About</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="trade-entry.html" class="cta-button">Dashboard</a></li>
+      <li><a href="dashboard.html" class="cta-button active">Dashboard</a></li>
     </ul>
     <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
   </nav>
@@ -34,7 +33,7 @@
         <span>Trading Tools</span>
       </div>
       <nav class="sidebar-nav">
-        <a href="trade-entry.html" class="sidebar-link active">
+        <a href="trade-entry.html" class="sidebar-link">
           <i class="fas fa-plus-circle"></i>
           <span>Manual Entry</span>
         </a>
@@ -54,7 +53,7 @@
           <i class="fas fa-globe"></i>
           <span>Market Insights</span>
         </a>
-        <a href="dashboard.html" class="sidebar-link">
+        <a href="dashboard.html" class="sidebar-link active">
           <i class="fas fa-calendar-alt"></i>
           <span>Calendar</span>
         </a>
@@ -65,37 +64,6 @@
       </nav>
     </aside>
 
-    <div class="dashboard-container">
-        <!-- Sidebar -->
-        <aside class="sidebar">
-            <div class="sidebar-header">
-                <i class="fas fa-chart-line"></i>
-                <span>Trading Tools</span>
-            </div>
-            <nav class="sidebar-nav">
-                <a href="trade-entry.html" class="sidebar-link">
-                    <i class="fas fa-plus-circle"></i>
-                    <span>Manual Entry</span>
-                </a>
-                <a href="import.html" class="sidebar-link">
-                    <i class="fas fa-file-import"></i>
-                    <span>Import Trades</span>
-                </a>
-                <a href="analytics.html" class="sidebar-link">
-                    <i class="fas fa-chart-bar"></i>
-                    <span>Analytics</span>
-                </a>
-                <a href="dashboard.html" class="sidebar-link active">
-                    <i class="fas fa-calendar-alt"></i>
-                    <span>Calendar</span>
-                </a>
-                <a href="#" class="sidebar-link">
-                    <i class="fas fa-cog"></i>
-                    <span>Settings</span>
-                </a>
-            </nav>
-        </aside>
-
         <!-- Main Content -->
         <main class="main-content">
             <div class="content-header">
@@ -104,7 +72,12 @@
                  <div class="cumulative-pnl">
                     <h2>Cumulative P/L</h2>
                     <div class="value">$0.00</div>
-                    <div class="percentage">0.00%</div>
+                    <div class="roi">0.00%</div>
+                </div>
+                <div class="cumulative-pnl">
+                  <h2>P/L</h2>
+                  <div class="value">$0.00</div>
+                  <div class="roi">0.00%</div>
                 </div>
                 <div class="year-selector">
                     <button id="prevYear"><i class="fas fa-chevron-left"></i></button>
@@ -193,6 +166,7 @@
     <script src="/scripts/global.js"></script>
     <script src="/scripts/dashboard.js"></script>
     <script src="/scripts/calendar-dashboard.js"></script>
-    <script src="authCheck.js"></script>
+    <script src="/scripts/TradeObjectHandler.js"></script>
+    <!-- <script src="authCheck.js"></script> -->
 </body>
 </html>
