--- a/pages/settings.html
+++ b/pages/settings.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TradeLab - Settings</title>
     <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../styles/dashboard.css">
     <link rel="stylesheet" href="../styles/settings.css" />
     <link
       rel="stylesheet"
@@ -26,6 +27,37 @@
       </ul>
       <i id="hamburger" class="fa-solid fa-bars fa-xl fa-icon"></i>
     </nav>
+
+    <div class="dashboard-container">
+      <!-- Sidebar -->
+      <aside class="sidebar">
+          <div class="sidebar-header">
+              <i class="fas fa-chart-line"></i>
+              <span>Trading Tools</span>
+          </div>
+          <nav class="sidebar-nav">
+              <a href="dashboard.html" class="sidebar-link">
+                  <i class="fas fa-plus-circle"></i>
+                  <span>Manual Entry</span>
+              </a>
+              <a href="import.html" class="sidebar-link">
+                  <i class="fas fa-file-import"></i>
+                  <span>Import Trades</span>
+              </a>
+              <a href="analytics.html" class="sidebar-link">
+                  <i class="fas fa-chart-bar"></i>
+                  <span>Analytics</span>
+              </a>
+              <a href="calendar.html" class="sidebar-link">
+                  <i class="fas fa-calendar-alt"></i>
+                  <span>Calendar</span>
+              </a>
+              <a href="settings.html" class="sidebar-link active">
+                  <i class="fas fa-cog"></i>
+                  <span>Settings</span>
+              </a>
+          </nav>
+      </aside>
 
     <div class="settings-container">
       <div class="settings-content">
@@ -146,17 +178,21 @@
           </div>
         </div>
 
-        <div class="settings-section">
-          <h2>Display Settings</h2>
-          <div class="display-settings">
-            <div class="setting-item">
-              <label for="defaultView">Default View:</label>
-              <select id="defaultView">
-                <option value="list">List View</option>
-                <option value="grid">Grid View</option>
-                <option value="table">Table View</option>
-              </select>
-            </div>
+
+                <!-- Display Settings -->
+                <div class="settings-section">
+                  <h2>Display Settings</h2>
+                  <div class="settings-group">
+                      <div class="setting-item">
+                          <label for="theme">Theme</label>
+                          <select id="theme">
+                              <option value="light">Light</option>
+                              <option value="dark">Dark</option>
+                              <option value="system">System Default</option>
+                          </select>
+                      </div>
+                  </div>
+              </div>
 
             <div class="setting-item">
               <label for="dateFormat">Date Format:</label>
@@ -166,6 +202,30 @@
                 <option value="YYYY-MM-DD">YYYY-MM-DD</option>
               </select>
             </div>
+                            <!-- Notification Settings -->
+                            <div class="settings-section">
+                              <h2>Notifications</h2>
+                              <div class="settings-group">
+                                  <div class="setting-item checkbox">
+                                      <label>
+                                          <input type="checkbox" id="emailNotifications">
+                                          Email notifications
+                                      </label>
+                                  </div>
+                                  <div class="setting-item checkbox">
+                                      <label>
+                                          <input type="checkbox" id="profitAlerts">
+                                          Profit target alerts
+                                      </label>
+                                  </div>
+                                  <div class="setting-item checkbox">
+                                      <label>
+                                          <input type="checkbox" id="lossAlerts">
+                                          Stop loss alerts
+                                      </label>
+                                  </div>
+                              </div>
+                          </div>
           </div>
         </div>
 
@@ -227,6 +287,7 @@
 
     <script src="../scripts/global.js"></script>
     <script src="../scripts/TradeObjectHandler.js"></script>
+    <script src="../scripts/dashboard.js"></script>
     <script src="../scripts/settings.js"></script>
   </body>
 </html>
