--- a/pages/trade-entry.html
+++ b/pages/trade-entry.html
@@ -410,6 +410,7 @@
   </div>
 
   <script src="../scripts/global.js"></script>
+  <script src="../scripts/theme.js"></script>
   <script src="../scripts/tradeEntry.js"></script>
   <script src="../scripts/dashboard.js"></script>
   <script src="../scripts/TradeObjectHandler.js"></script>
